examples/good/02-Literal.tms
int main() {
    string a = "some string";
    string b = "another one";
    return 0;
}