examples/bad/01-BadType2.tms
void main () {
  int x = 5;
  string i = x + 10;
  return;
}